Optimal solution for count pairs